methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:7: error: not found: value fairecarre
      fairecarre(Color.green);
      ^PatternPicture:8: error: not found: value fairecarre
      fairecarre(Color.yellow);
      ^