methods.picture.PatternPicture.scala.code
override def run() {
  for (i <- 1 to 4) {
    for (j <-1 to 2) {

      fairecarre1(Color.red);
      fairecarre2(Color.blue);
      fairecarre(Color.green);
      fairecarre(Color.yellow);
      avance(5);
    }
    gauche();
    avance(5);
    droite();

  }}
def fairecarre1(c: Color) {
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color)
  leveBrosse();
  gauche();
  avance();
  gauche();
  avance();
  baisseBrosse();
  gauche();
  leveBrosse();
  avance();
  gauche();
  avance();

}
def fairecarre2(c: Color) {
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color)
  leveBrosse();
  droite();
  avance();
  gauche();
  avance();
  baisseBrosse();
  gauche();
  leveBrosse();
  avance();
  gauche();
  avance();

}